--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.66"
 itertools = "0.10.5"
+tuple-map = "0.4.0"
 
 [[bin]]
 name = "day01"
@@ -20,3 +21,7 @@ path = "day02.rs"
 [[bin]]
 name = "day03"
 path = "day03.rs"
+
+[[bin]]
+name = "day04"
+path = "day04.rs"
