15: Works, but need refactoring into spans w/set operations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.66"
 itertools = "0.10.5"
 json = "0.12.4"
+text_io = "0.1.12"
 tuple-map = "0.4.0"
 
 [[bin]]
@@ -66,3 +67,7 @@ path = "day13.rs"
 [[bin]]
 name = "day14"
 path = "day14.rs"
+
+[[bin]]
+name = "day15"
+path = "day15.rs"
