--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.66"
 itertools = "0.10.5"
 json = "0.12.4"
+rayon = "1.6.1"
 regex = "1.7.0"
 text_io = "0.1.12"
 tuple-map = "0.4.0"
@@ -84,3 +85,7 @@ path = "day17.rs"
 [[bin]]
 name = "day18"
 path = "day18.rs"
+
+[[bin]]
+name = "day19"
+path = "day19.rs"
